# Genomeocean_Giant_Virus_Classifier

./: README.md
genomeocean-classifier-pipeline/: .gitignore  README.md  pyproject.toml
genomeocean-classifier-pipeline/configs/: models.yaml
genomeocean-classifier-pipeline/examples/: example.fna
genomeocean-classifier-pipeline/src/genomeocean_pipeline/: __init__.py  cli.py  pipeline.py
genomeocean-classifier-pipeline/tests/: test_pipeline.py
genomeocean-main-classifier/: README.md  pyproject.toml
genomeocean-main-classifier/examples/: example.fna
genomeocean-main-classifier/scripts/: prepare_hf_folds.py
genomeocean-main-classifier/src/genomeocean_main/: __init__.py  aggregation.py  cli.py  fasta.py  predict.py  preprocessing.py
genomeocean-main-classifier/tests/: test_preprocessing.py  test_smoke.py
genomeocean-sub-classifier/: README.md  pyproject.toml
genomeocean-sub-classifier/examples/: example_ncldv_mirus.fna
genomeocean-sub-classifier/scripts/: prepare_hf_folds.py
genomeocean-sub-classifier/src/genomeocean_sub/: __init__.py  aggregation.py  cli.py  fasta.py  predict.py  preprocessing.py
genomeocean-sub-classifier/tests/: test_preprocessing.py  test_smoke.py
